# SVG2FontBuilder

./: .gitignore  HISTORY.md  InfoScreen.kv  InfoScreen.py  LICENSE  MDWarningSnackbar.py  MetricScreen.kv  MetricScreen.py  README.md  SVG2FontBuilder.kv  SetupScreen.kv  SetupScreen.py  build.bat  build_po.bat  newfontbuild.py  pyproject.toml  requirements.txt  setup.cfg  svg2fontbuilder.ini  svgbuilder.py  svgbuilder.spec
docs/: settings.md  设计师如何制作一套字库 手把手教你生成字库教程.md
locales/en/LC_MESSAGES/: svgui.po
locales/languages/LC_MESSAGES/: languages.po
locales/zh-Hans/LC_MESSAGES/: svgui.po
locales/zh-Hant/LC_MESSAGES/: svgui.po
localization/: __init__.py  observable_translation.py
