[project]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[options]
zip_safe = False
include_package_data = True

[options.package_data]
locales = *
localization = *
overrides = *
= *.kv
= aglfn.txt
= S2F.png

[metadata]
name = SVG2FontBuilder
version = 0.1.0
author = NightFurySL2001
description = A SVG to OpenType font convertor
long_description = file: README.md
long_description_content_type = text/markdown
keywords = svg, font, opentype
license = MIT License